スモールのメールシステムを作成してみた。 → 途中

--- a/quality_test.ipynb
+++ b/quality_test.ipynb
@@ -2,13 +2,559 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import os\n",
-    "import glob"
+    "import pandas as pd\n",
+    "from datetime import datetime\n",
+    "import glob\n",
+    "import win32com.client\n",
+    "import msvcrt\n",
+    "import sys\n",
+    "from datetime import timedelta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir('\\\\\\\\FSJ231A\\\\FP_development_B\\\\40_工程\\\\90_検査梱包\\\\【1-3.測定結果】\\\\出荷測定データ(170721～)\\\\01_製品\\\\CW6A\\\\2023年\\\\CW6AS-3315-001')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_moto = pd.read_excel('CW6AS-3315-001_特性結果一覧表.xlsx',\n",
+    "                    sheet_name='測定結果',\n",
+    "                    usecols=\"E:I\",\n",
+    "                    header=11,\n",
+    "                    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>814.152</td>\n",
+       "      <td>819.531</td>\n",
+       "      <td>819.531</td>\n",
+       "      <td>814.152</td>\n",
+       "      <td>817.447</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>33.48</td>\n",
+       "      <td>33.573</td>\n",
+       "      <td>33.573</td>\n",
+       "      <td>33.48</td>\n",
+       "      <td>34.449</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>113.3</td>\n",
+       "      <td>113.6</td>\n",
+       "      <td>114.2</td>\n",
+       "      <td>112.9</td>\n",
+       "      <td>113.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3H</td>\n",
+       "      <td>3H</td>\n",
+       "      <td>3H</td>\n",
+       "      <td>3H</td>\n",
+       "      <td>3H</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.89</td>\n",
+       "      <td>7.14</td>\n",
+       "      <td>5.99</td>\n",
+       "      <td>6.53</td>\n",
+       "      <td>6.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>0.53923</td>\n",
+       "      <td>0.50913</td>\n",
+       "      <td>0.49995</td>\n",
+       "      <td>0.50295</td>\n",
+       "      <td>0.50602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>0.46968</td>\n",
+       "      <td>0.50768</td>\n",
+       "      <td>0.53543</td>\n",
+       "      <td>0.51703</td>\n",
+       "      <td>0.54131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>0</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>-</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>80 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          1        2        3        4        5\n",
+       "0   814.152  819.531  819.531  814.152  817.447\n",
+       "1     33.48   33.573   33.573    33.48   34.449\n",
+       "2     113.3    113.6    114.2    112.9    113.6\n",
+       "3        3H       3H       3H       3H       3H\n",
+       "4      5.89     7.14     5.99     6.53     6.16\n",
+       "..      ...      ...      ...      ...      ...\n",
+       "75  0.53923  0.50913  0.49995  0.50295  0.50602\n",
+       "76  0.46968  0.50768  0.53543  0.51703  0.54131\n",
+       "77        0        -        -        -        -\n",
+       "78        -        0        -        -        -\n",
+       "79        -        -        0        -        -\n",
+       "\n",
+       "[80 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_moto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_over_under = pd.read_excel('CW6AS-3315-001_特性結果一覧表.xlsx',\n",
+    "                    sheet_name='測定結果',\n",
+    "                    usecols=\"O:P\",\n",
+    "                    header=11,\n",
+    "                    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>上限値</th>\n",
+       "      <th>下限値</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>900.00</td>\n",
+       "      <td>680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>45.00</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>125.00</td>\n",
+       "      <td>106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3H</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8.28</td>\n",
+       "      <td>3.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>0.90</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>0.90</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>80 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       上限値   下限値\n",
+       "0   900.00   680\n",
+       "1    45.00    31\n",
+       "2   125.00   106\n",
+       "3      NaN    3H\n",
+       "4     8.28  3.72\n",
+       "..     ...   ...\n",
+       "75    0.90   0.1\n",
+       "76    0.90   0.1\n",
+       "77     NaN   NaN\n",
+       "78     NaN   NaN\n",
+       "79     NaN   NaN\n",
+       "\n",
+       "[80 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_over_under"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col_names = ['番号', 'ロット番号']\n",
+    "df_lot = pd.read_excel('CW6AS-3315-001_特性結果一覧表.xlsx',\n",
+    "                    sheet_name='測定結果',\n",
+    "                    usecols=\"B:C\",\n",
+    "                    header=2,\n",
+    "                    names=col_names\n",
+    "                    ).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>番号</th>\n",
+       "      <th>ロット番号</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>CW6A0A32210016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>CW6A0A32210091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>CW6A0A32210091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>CW6A0A32210022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>CW6A0A32210035</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  番号           ロット番号\n",
+       "0  1  CW6A0A32210016\n",
+       "1  2  CW6A0A32210091\n",
+       "2  3  CW6A0A32210091\n",
+       "3  4  CW6A0A32210022\n",
+       "4  5  CW6A0A32210035"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_lot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_lot = pd.read_excel('CW6AS-3315-001_特性結果一覧表.xlsx',\n",
+    "                    sheet_name='測定結果',\n",
+    "                    usecols=\"B:D\",\n",
+    "                    header=11,\n",
+    "                    #names=col_names\n",
+    "                    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Item</th>\n",
+       "      <th>Unnamed: 2</th>\n",
+       "      <th>Unnamed: 3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>DOL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>WCA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>鉛筆硬度</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>印刷面 SCI</td>\n",
+       "      <td>L*</td>\n",
+       "      <td>①</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>③</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>④</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>クロスカット</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>①</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>②</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>③</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>80 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Item Unnamed: 2 Unnamed: 3\n",
+       "0        CS        NaN        NaN\n",
+       "1       DOL        NaN        NaN\n",
+       "2       WCA        NaN        NaN\n",
+       "3      鉛筆硬度        NaN        NaN\n",
+       "4   印刷面 SCI         L*          ①\n",
+       "..      ...        ...        ...\n",
+       "75      NaN        NaN          ③\n",
+       "76      NaN        NaN          ④\n",
+       "77   クロスカット        NaN          ①\n",
+       "78      NaN        NaN          ②\n",
+       "79      NaN        NaN          ③\n",
+       "\n",
+       "[80 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_lot"
    ]
   },
   {
@@ -26,7 +572,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.13"
   },
   "orig_nbformat": 4
